Bug 631073 - Need some sort of throbber while a piece of feedback is being submitted on mobile submission Bug 631264 - Mobile feedback UI differences

--- a/media/css/release-mobile.css
+++ b/media/css/release-mobile.css
@@ -203,12 +203,22 @@ section.inset {
 		line-height: 13px;
 		color: #838E98;
 	}
+    section .char-count.low {
+        color: #ff8c00;
+    }
+    section .char-count.verylow {
+        color: #ff0000;
+    }
 	section .warning {
+		color: #838e98;
 		display: block;
 		margin-top: .5em;
 		font-size: 12px;
 		line-height: 1.3;
-		color: #838e98;
+	}
+	section .warning span {
+	    background-color: #FFFFDD;
+	    padding: .1em;
 	}
 	section input[type=url],
 	section input[type=text],
@@ -235,11 +245,12 @@ section.inset {
 		line-height: 1.2;
 		resize: none;
 	}
-	section button {
+	section button,
+	div.submit a {
 		display:block;
 		position: relative;
 		width: 100%;
-		padding: .2em 0;
+		padding: .5em 0 .4em 0;
 		background: -moz-linear-gradient(#83c53c, #519d1b);
 		-moz-box-shadow: 0px 3px 0 #438814;
 		box-shadow: 0px 3px 0 #438814;
@@ -254,17 +265,20 @@ section.inset {
 		border: 0;
 		cursor: pointer;
 	}
+	div.submit a:active,
 	section button:active {
 		top: 2px;
 		box-shadow: 0px 1px 0 #438814,
 		            inset 0 1000px 0 rgba(255,255,255,.25);
 	}
+	div.submit a.waiting,
+	div.submit a.disabled,
 	section button:disabled {
 		background: -moz-linear-gradient(#d6d6d6, #c3c3c3);
 		box-shadow: 0px 3px 0 #bababa;
+		-moz-box-shadow:0 3px 0 #999;
 		text-shadow: 0 -1px 0 #c4c4c4;
 	}
-
 
 
 footer {
@@ -392,3 +406,11 @@ footer {
 	#thanks #thanks-twitter .icon { background-position: -100px 0; }
 	#thanks #thanks-facebook .icon { background-position: -150px 0; }
 	#thanks #thanks-planet .icon { background-position: -200px 0; }
+
+
+.errorlist {
+    color: red;
+    font-size: 80%;
+    font-weight: bold;
+    margin-top: .5em;
+}
